@@ -3,16 +3,17 @@ package org.folio.service.pieces.flows;
 import static org.folio.rest.core.exceptions.ErrorCodes.ALL_PIECES_MUST_HAVE_THE_SAME_POLINE_ID_AND_TITLE_ID;
 import static org.folio.rest.core.exceptions.ErrorCodes.CREATE_ITEM_FOR_PIECE_IS_NOT_ALLOWED_ERROR;
 import static org.folio.rest.core.exceptions.ErrorCodes.PIECE_DISPLAY_ON_HOLDINGS_IS_NOT_CONSISTENT;
+import static org.folio.rest.core.exceptions.ErrorCodes.PIECE_SEQUENCE_NUMBER_IS_INVALID;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import lombok.extern.log4j.Log4j2;
+import one.util.streamex.StreamEx;
 import org.apache.commons.collections4.CollectionUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.folio.orders.utils.PoLineCommonUtil;
 import org.folio.rest.RestConstants;
 import org.folio.rest.core.exceptions.HttpException;
@@ -24,80 +25,81 @@ import org.folio.rest.jaxrs.model.Errors;
 import org.folio.rest.jaxrs.model.Parameter;
 import org.folio.rest.jaxrs.model.Physical;
 import org.folio.rest.jaxrs.model.Piece;
+import org.folio.rest.jaxrs.model.Title;
 import org.folio.service.pieces.validators.PieceValidatorUtil;
 
 import io.vertx.core.json.JsonObject;
 
+@Log4j2
 public class DefaultPieceFlowsValidator {
-  private static final Logger logger = LogManager.getLogger(DefaultPieceFlowsValidator.class);
 
-  public void isPieceRequestValid(Piece pieceToCreate, CompositePurchaseOrder originalOrder, PoLine originPoLine, boolean isCreateItem) {
-    List<Error> isItemCreateValidError = validateItemCreateFlag(pieceToCreate, originPoLine, isCreateItem);
-    List<Error> combinedErrors = new ArrayList<>(isItemCreateValidError);
-    List<Error> pieceLocationErrors = Optional.ofNullable(PieceValidatorUtil.validatePieceLocation(pieceToCreate, originPoLine)).orElse(new ArrayList<>());
-    combinedErrors.addAll(pieceLocationErrors);
-    List<Error> pieceFormatErrors = Optional.ofNullable(PieceValidatorUtil.validatePieceFormat(pieceToCreate, originPoLine)).orElse(new ArrayList<>());
-    combinedErrors.addAll(pieceFormatErrors);
-    List<Error> displayOnHoldingsErrors = validateDisplayOnHoldingsConsistency(pieceToCreate);
-    combinedErrors.addAll(displayOnHoldingsErrors);
-    List<Error> relatedOrderErrors = PieceValidatorUtil.validatePieceRelatedOrder(originalOrder, originPoLine);
-    combinedErrors.addAll(relatedOrderErrors);
+  public void isPieceRequestValid(Piece pieceToCreate, CompositePurchaseOrder originalOrder, PoLine originPoLine, Title title, boolean isCreateItem) {
+    isPieceRequestValid(pieceToCreate, originalOrder, originPoLine, title, 1, isCreateItem);
+  }
+
+  public void isPieceRequestValid(Piece pieceToCreate, CompositePurchaseOrder originalOrder, PoLine originPoLine, Title title, int piecesInBatch, boolean isCreateItem) {
+    List<Error> combinedErrors = Stream.of(
+        PieceValidatorUtil.validatePieceLocation(pieceToCreate, originPoLine),
+        PieceValidatorUtil.validatePieceFormat(pieceToCreate, originPoLine),
+        PieceValidatorUtil.validatePieceRelatedOrder(originalOrder, originPoLine),
+        validateItemCreateFlag(pieceToCreate, originPoLine, isCreateItem),
+        validateDisplayOnHoldingsConsistency(pieceToCreate),
+        validatePieceSequenceNumber(pieceToCreate, title, piecesInBatch))
+      .flatMap(Collection::stream)
+      .toList();
     if (CollectionUtils.isNotEmpty(combinedErrors)) {
       Errors errors = new Errors().withErrors(combinedErrors).withTotalRecords(combinedErrors.size());
-      if (logger.isErrorEnabled()) logger.error("Validation error: {}", JsonObject.mapFrom(errors).encodePrettily());
+      if (log.isErrorEnabled()) log.error("Validation error: {}", JsonObject.mapFrom(errors).encodePrettily());
       throw new HttpException(RestConstants.BAD_REQUEST, errors);
     }
   }
 
-  public void isPieceBatchRequestValid(List<Piece> piecesToCreate, CompositePurchaseOrder originalOrder, PoLine originPoLine, boolean isCreateItem) {
-    var titlePoLineIds = piecesToCreate.stream()
-      .collect(Collectors.groupingBy(piece -> piece.getTitleId() + ":" + piece.getPoLineId()));
+  public void isPieceBatchRequestValid(List<Piece> piecesToCreate, CompositePurchaseOrder originalOrder, PoLine originPoLine, Title title, boolean isCreateItem) {
+    var titlePoLineIds = StreamEx.of(piecesToCreate).groupingBy(piece -> piece.getTitleId() + ":" + piece.getPoLineId());
     if (titlePoLineIds.size() > 1) {
       var param = new Parameter().withKey("titlePoLineIds").withValue(titlePoLineIds.keySet().toString());
       var error = ALL_PIECES_MUST_HAVE_THE_SAME_POLINE_ID_AND_TITLE_ID.toError().withParameters(List.of(param));
-      logger.error("isPieceBatchRequestValid:: Validation Error {}", error.getMessage());
+      log.error("isPieceBatchRequestValid:: Validation Error {}", error.getMessage());
       throw new HttpException(RestConstants.VALIDATION_ERROR, ALL_PIECES_MUST_HAVE_THE_SAME_POLINE_ID_AND_TITLE_ID);
     }
-    piecesToCreate.forEach(piece -> isPieceRequestValid(piece, originalOrder, originPoLine, isCreateItem));
+    piecesToCreate.forEach(piece -> isPieceRequestValid(piece, originalOrder, originPoLine, title, piecesToCreate.size(), isCreateItem));
   }
 
   public static List<Error> validateItemCreateFlag(Piece pieceToCreate, PoLine originPoLine, boolean createItem) {
-    if (createItem && !isCreateItemForPiecePossible(pieceToCreate, originPoLine)) {
-      String msg = String.format(CREATE_ITEM_FOR_PIECE_IS_NOT_ALLOWED_ERROR.getDescription(), pieceToCreate.getFormat(), originPoLine.getId());
-      return List.of(new Error().withCode(CREATE_ITEM_FOR_PIECE_IS_NOT_ALLOWED_ERROR.getCode()).withMessage(msg));
-    }
-    return Collections.emptyList();
+    return createItem && !isCreateItemForPiecePossible(pieceToCreate, originPoLine)
+      ? List.of(new Error().withCode(CREATE_ITEM_FOR_PIECE_IS_NOT_ALLOWED_ERROR.getCode())
+        .withMessage(CREATE_ITEM_FOR_PIECE_IS_NOT_ALLOWED_ERROR.getDescription().formatted(pieceToCreate.getFormat(), originPoLine.getId())))
+      : List.of();
   }
 
   public static List<Error> validateDisplayOnHoldingsConsistency(Piece piece) {
-    if (Boolean.FALSE.equals(piece.getDisplayOnHolding()) && Boolean.TRUE.equals(piece.getDisplayToPublic())) {
-      return List.of(PIECE_DISPLAY_ON_HOLDINGS_IS_NOT_CONSISTENT.toError());
-    }
-    return Collections.emptyList();
+    return Boolean.FALSE.equals(piece.getDisplayOnHolding()) && Boolean.TRUE.equals(piece.getDisplayToPublic())
+      ? List.of(PIECE_DISPLAY_ON_HOLDINGS_IS_NOT_CONSISTENT.toError())
+      : List.of();
+  }
+
+  public static List<Error> validatePieceSequenceNumber(Piece piece, Title title, int piecesInBatch) {
+    return piece.getSequenceNumber() != null && (piece.getSequenceNumber() <= 0 || piece.getSequenceNumber() >= title.getNextSequenceNumber() + piecesInBatch)
+      ? List.of(PIECE_SEQUENCE_NUMBER_IS_INVALID.toError())
+      : List.of();
   }
 
   public static boolean isCreateHoldingForPiecePossible(Piece pieceToCreate, PoLine originPoLine) {
-    Piece.Format pieceFormat = pieceToCreate.getFormat();
-    return (pieceFormat == Piece.Format.ELECTRONIC && PoLineCommonUtil.isHoldingUpdateRequiredForEresource(originPoLine)) ||
-              ((pieceFormat == Piece.Format.PHYSICAL || pieceFormat == Piece.Format.OTHER)
-                        && PoLineCommonUtil.isHoldingUpdateRequiredForPhysical(originPoLine));
+    return isPieceFormatElectronic(pieceToCreate) && PoLineCommonUtil.isHoldingUpdateRequiredForEresource(originPoLine)
+        || isPieceFormatNonElectronic(pieceToCreate) && PoLineCommonUtil.isHoldingUpdateRequiredForPhysical(originPoLine);
   }
 
   public static boolean isCreateItemForPiecePossible(Piece pieceToCreate, PoLine originPoLine) {
-    return isCreateItemForElectronicPiecePossible(pieceToCreate, originPoLine) ||
-                  isCreateItemForNonElectronicPiecePossible(pieceToCreate, originPoLine);
+    return isCreateItemForElectronicPiecePossible(pieceToCreate, originPoLine)
+        || isCreateItemForNonElectronicPiecePossible(pieceToCreate, originPoLine);
   }
 
   public static boolean isCreateItemForElectronicPiecePossible(Piece pieceToCreate, PoLine originPoLine) {
-    Piece.Format pieceFormat = pieceToCreate.getFormat();
-    return (pieceFormat == Piece.Format.ELECTRONIC && isItemsUpdateRequiredForEresource(originPoLine));
+    return isPieceFormatElectronic(pieceToCreate) && isItemsUpdateRequiredForEresource(originPoLine);
   }
 
-
   public static boolean isCreateItemForNonElectronicPiecePossible(Piece pieceToCreate, PoLine originPoLine) {
-    Piece.Format pieceFormat = pieceToCreate.getFormat();
-    return (pieceFormat == Piece.Format.PHYSICAL || pieceFormat == Piece.Format.OTHER)
-                            && isItemsUpdateRequiredForPhysical(originPoLine);
+    return isPieceFormatNonElectronic(pieceToCreate) && isItemsUpdateRequiredForPhysical(originPoLine);
   }
 
   public static boolean isItemsUpdateRequiredForEresource(PoLine poLine) {
@@ -111,4 +113,13 @@ public class DefaultPieceFlowsValidator {
       .map(physical -> physical.getCreateInventory() == Physical.CreateInventory.INSTANCE_HOLDING_ITEM)
       .orElse(false);
   }
+
+  private static boolean isPieceFormatElectronic(Piece piece) {
+    return piece.getFormat() == Piece.Format.ELECTRONIC;
+  }
+
+  private static boolean isPieceFormatNonElectronic(Piece piece) {
+    return piece.getFormat() == Piece.Format.PHYSICAL || piece.getFormat() == Piece.Format.OTHER;
+  }
+
 }
